# grobase

./: .agency-tenant.env  .canagrou-tenant.env  .dockerignore  .env.example  .env.local.example  .gitignore  .gitleaks.toml  .gitmodules  .hadolint.yaml  .hypertube-baas.env  .savanna-tenant.env  .shellcheckrc  .surfind-tenant.env  .trivyignore  .trufflehogignore  .yamllint  CLA.md  CLAUDE.md  CONCLUSION.md  FRESH-START.md  HUMAN-ATOMS.md  LICENSE-ENTERPRISE.md  LICENSING.md  Makefile  Makefile.bak  README.md  SECURITY-AUDIT.md  SECURITY.md  USERDOC.md  config.env  docker-compose.yml  package.json  prompt.md  sonar-project.properties
.claude/: AGENTS.md  README.md
artifacts/: footprint-query.json
data-snapshots/: README.md  restore-databases.sh  snapshot-databases.sh
deploy/: README.md
docs/: Partner-Demo-Runbook.md  Production-Performance-Strategy.md  README.md  SDK-Backend-Service-Coverage.md  SDK-v2-Design.md  Supabase-Style-Deployment-Tiers.md  dossier-projet.html  dossier-projet.md  prismatica.md  projet-back.md  projet-back.md.bak  sdk.md  vulnerability.md
infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/: Cargo.toml
infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/src/: fanout.rs  metrics.rs  presence_shared.rs  usage.rs
infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/src/connection/: mod.rs  send.rs
infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/src/ws_handler/: connection.rs  handlers.rs  util.rs  writer.rs
mini-baas-infra/: .env.example  .gitignore  Makefile  Makefile.legacy  QUICKSTART.md  README.md  TROUBLESHOOTING.md  docker-bake.hcl  docker-compose.netseg.yml  docker-compose.yml  sonar-project.properties  test_need-human_touch.md  test_parity.sh
mini-baas-infra/docker/services/data-plane-router/crates/data-plane-core/: Cargo.toml
mini-baas-infra/docker/services/data-plane-router/crates/data-plane-core/src/: error.rs  filter.rs  lib.rs  planner.rs  schema.rs
mini-baas-infra/docker/services/data-plane-router/crates/data-plane-core/tests/: sec_schema_ddl.rs
mini-baas-infra/docker/services/data-plane-router/crates/engine-conformance/: Cargo.toml  README.md
mini-baas-infra/docker/services/data-plane-router/crates/engine-conformance/src/: lib.rs
mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-bus-irc/: Cargo.toml
mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-bus-irc/src/: session_manager.rs
scripts/: README.md  provision-contract.sh  replay-commits.sh  trust-browser-host-ca.sh  vault-env.mjs
sdk/: LICENSE  PUBLISHING.md  package-lock.json  package.json
sdk-dart/: README.md  pubspec.yaml
sdk-python/: README.md  tox.ini
sdk-python.rootowned-stale/: README.md  pyproject.toml
src/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
wiki/: 00-overview.md  01-gap-analysis.md  02-layer-edition-model.md  03-control-plane.md  04-data-plane.md  05-orchestration-observability-roadmap.md  README.md  architecture_relation.md  competitive-3way-binocle-vs-pocketbase.md  competitive-benchmark-report.md  competitive-matrix.md  compliance-posture.md  cost-analysis.md  cost-model.md  cutover-status.md  (+23 more)
(+2310 files in other folders)
