[package]
name = "engine-conformance"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

# The reusable conformance battery every EngineAdapter must pass. It exercises
# an adapter through its public EnginePool surface (no HTTP) against a real
# engine reachable at CONFORMANCE_DSN, and asserts the adapter serves EXACTLY
# what its EngineCapabilities descriptor advertises — capability honesty IS the
# conformance contract. New engines (Phase 3) only merge once green here.

[dependencies]
data-plane-core = { path = "../data-plane-core" }
data-plane-pool = { path = "../data-plane-pool" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
